kubectl_deploy/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-ian-dotnet-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex-ian-dotnet-test
  template:
    metadata:
      labels:
        app: dex-ian-dotnet-test
    spec:
      containers:
        - name: dex-ian-dotnet-test
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/correspondence/dex-ian-dotnet-test-ecr:latest
          ports:
            - containerPort: 5000
