kubectl_deploy/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dex-ian-dotnet-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - dex-ian-dotnet-test-development.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
    - host: dex-ian-dotnet-test-development.apps.live-1.cloud-platform.service.justice.gov.uk
      http:
        paths:
        - path: /
          backend:
            serviceName: dex-ian-dotnet-test-service
            servicePort: 5000
